@@ -1,5 +1,8 @@
 2006-12-12  Tim Waugh  <twaugh@redhat.com>
 
+	* printer/Epson-Stylus_Photo_895.xml: Added IEEE 1284 info (RH
+	bug #191504).
+
 	* printer/HP-OfficeJet_7300.xml: Added IEEE 1284 information (RH
 	bug #198999).
 
